--- a/docs/_posts/2016-04-04-react-v15.md
+++ b/docs/_posts/2016-04-04-react-v15.md
@@ -51,19 +51,23 @@ If you can’t use `npm` yet, we provide pre-built browser builds for your conve
 
 - #### `document.createElement` is in and `data-reactid` is out
 
-    There were a number of large changes to our interactions with the DOM. One of the most noticeable changes is that we no longer set the `data-reactid` attribute for each DOM node. While this will make it much more difficult to know if a website is using React, the advantage is that the DOM is much more lightweight. This change was made possible by us switching to use `document.createElement` on initial render. Previously we would generate a large string of HTML and then set `node.innerHTML`. At the time, this was decided to be faster than using `document.createElement` for the majority of cases and browsers that we supported. Browsers have continued to improve and so overwhelmingly this is no longer true. By using `createElement` we can make other parts of React faster. The ids were used to map back from events to the original React component, meaning we had to do a bunch of work on every event, even though we cached this data heavily. As we’ve all experienced, caching and in particularly invalidating caches, can be error prone and we saw many hard to reproduce issues over the years as a result. Now we can build up a direct mapping at render time since we already have a handle on the node.
+    There were a number of large changes to our interactions with the DOM. One of the most noticeable changes is that we no longer set the `data-reactid` attribute for each DOM node. While this will make it more difficult to know if a website is using React, the advantage is that the DOM is much more lightweight. This change was made possible by us switching to use `document.createElement` on initial render. Previously we would generate a large string of HTML and then set `node.innerHTML`. At the time, this was decided to be faster than using `document.createElement` for the majority of cases and browsers that we supported. Browsers have continued to improve and so overwhelmingly this is no longer true. By using `createElement` we can make other parts of React faster. The ids were used to map back from events to the original React component, meaning we had to do a bunch of work on every event, even though we cached this data heavily. As we’ve all experienced, caching and in particularly invalidating caches, can be error prone and we saw many hard to reproduce issues over the years as a result. Now we can build up a direct mapping at render time since we already have a handle on the node.
+
+    Note that `data-reactid` is still present in the markup generated when rendering on the server although there [may be ways](https://github.com/facebook/react/issues/5869) to remove it completely in the future releases. Please feel free to explore this and send a pull request if you get it working.
+
+    If you used `data-reactid` to detect websites using React, you can now look for `data-reactroot` instead. Unlike `data-reactid`, `data-reactroot` will only be set on the root DOM node. Still, these attributes are considered to be implementation details of React, and we suggest you to avoid relying on their presence.
 
 - #### No more extra `<span>`s
 
-    Another big change with our DOM interaction is how we render text blocks. Previously you may have noticed that React rendered a lot of extra `<span>`s. Eg, in our most basic example on the home page we render `<div>Hello {this.props.name}</div>`, resulting in markup that contained 2 `<span>`s. Now we’ll render plain text nodes interspersed with comment nodes that are used for demarcation. This gives us the same ability to update individual pieces of text, without creating extra nested nodes. Very few people have depended on the actual markup generated here so it’s likely you are not impacted. However if you were targeting these `<span>`s in your CSS, you will need to adjust accordingly. You can always render them explicitly in your components.
+    Another big change with our DOM interaction is how we render text blocks. Previously you may have noticed that React rendered a lot of extra `<span>`s. For example, in our most basic example on the home page we render `<div>Hello {this.props.name}</div>`, resulting in markup that contained 2 `<span>`s. Now we’ll render plain text nodes interspersed with comment nodes that are used for demarcation. This gives us the same ability to update individual pieces of text, without creating extra nested nodes. Very few people have depended on the actual markup generated here so it’s likely you are not impacted. However if you were targeting these `<span>`s in your CSS, you will need to adjust accordingly. You can always render them explicitly in your components.
 
 - #### Rendering `null` now uses comment nodes
 
-    We’ve also made use of these comment nodes to change what `null` renders to. Rendering to `null` was a feature we added in React v0.11 and was implemented by rendering `<noscript>` elements. By rendering to comment nodes now, there’s a chance some of your CSS will be targeting the wrong thing, specifically if you are making use of `:nth-child` selectors. This, along with the other changes mentioned above, have always been considered implementation details of how React targets the DOM. We believe they are safe changes to make without going through a release with warnings detailing the subtle differences as they are details that should not be depended upon. Additionally, we have seen that these changes have improved React performance for many typical applications.
+    We’ve also made use of these comment nodes to change what `null` renders to. Rendering to `null` was a feature we added in React 0.11 and was implemented by rendering `<noscript>` elements. By rendering to comment nodes now, there’s a chance some of your CSS will be targeting the wrong thing, specifically if you are making use of `:nth-child` selectors. This, along with the other changes mentioned above, have always been considered implementation details of how React targets the DOM. We believe they are safe changes to make without going through a release with warnings detailing the subtle differences as they are details that should not be depended upon. Additionally, we have seen that these changes have improved React performance for many typical applications.
 
 - #### Functional components can now return `null` too
 
-    We added support for [defining stateless components as functions](/react/blog/2015/09/10/react-v0.14-rc1.html#stateless-function-components) in React 0.14. However, React 0.14 still allowed you to define a class component without extending `React.Component` or using `React.createClass()`, so [we couldn’t reliably tell if your component is functional or a class](https://github.com/facebook/react/issues/5355), and did not allow returning `null` from it. This issue is solved in React 15, and you can now return `null` from any component, whether it is a class or a function.
+    We added support for [defining stateless components as functions](/react/blog/2015/09/10/react-v0.14-rc1.html#stateless-function-components) in React 0.14. However, React 0.14 still allowed you to define a class component without extending `React.Component` or using `React.createClass()`, so [we couldn’t reliably tell if your component is a function or a class](https://github.com/facebook/react/issues/5355), and did not allow returning `null` from it. This issue is solved in React 15, and you can now return `null` from any component, whether it is a class or a function.
 
 - #### Improved SVG support
 
@@ -74,18 +78,22 @@ If you can’t use `npm` yet, we provide pre-built browser builds for your conve
 
 It’s worth calling out the DOM structure changes above again, in particular the change from `<span>`s. In the course of updating the Facebook codebase, we found a very small amount of code that was depending on the markup that React generated. Some of these cases were integration tests like WebDriver which were doing very specific XPath queries to target nodes. Others were simply tests using `ReactDOM.renderToStaticMarkup` and comparing markup. Again, there were a very small number of changes that had to be made, but we don’t want anybody to be blindsided. We encourage everybody to run their test suites when upgrading and consider alternative approaches when possible. One approach that will work for some cases is to explicitly use `<span>`s in your `render` method.
 
-These deprecations were introduced in v0.14 with a warning and the APIs are now removed.
+There is one additional breaking change that is unlikely to affect most users but is worth mentioning. We are working on [revamping `ReactPerf` instrumentation](https://github.com/facebook/react/pull/6046) to be more accurate and provide more detailed information. This change won’t ship as a part of React 15.0 but we plan to introduce it in a minor 15.x release. Since the internal instrumentation measurement format is going to change, [the return value of `ReactPerf.getLastMeasurements()` is now considered an opaque data structure](https://github.com/facebook/react/pull/6286) that you shouldn’t reach into. We will update the documentation if its format becomes an officially supported part of public API again.
 
-- Deprecated APIs removed from `React`, specifically `findDOMNode`, `render`, `renderToString`, `renderToStaticMarkup`, and `unmountComponentAtNode`.
-- Deprecated APIs removed from `React.addons`, specifically `batchedUpdates` and `cloneWithProps`.
-- Deprecated APIs removed from component instances, specifically `setProps`, `replaceProps`, and `getDOMNode`.
+These deprecations were introduced in v0.14 with a warning and the APIs are now removed:
+
+- Deprecated APIs are removed from `React`, specifically `findDOMNode`, `render`, `renderToString`, `renderToStaticMarkup`, and `unmountComponentAtNode`.
+- Deprecated APIs are removed from `React.addons`, specifically `batchedUpdates` and `cloneWithProps`.
+- Deprecated APIs are removed from component instances, specifically `setProps`, `replaceProps`, and `getDOMNode`.
+- Deprecated CommonJS entry point `react/addons` is removed in favor of the separate `react-addons-*` packages. This does not affect the `react-with-addons.js` UMD build.
 
 ### New deprecations, introduced with a warning
 
 Each of these changes will continue to work as before with a new warning until the release of React 16 so you can upgrade your code gradually.
 
 - `LinkedStateMixin` and `valueLink` are now deprecated due to very low popularity. If you need this, you can use a wrapper component that implements the same behavior: [react-linked-input](https://www.npmjs.com/package/react-linked-input).
-
+- `ReactPerf.printDOM()` has been renamed to `ReactPerf.printOperations()`.
+- `ReactPerf.getMeasurementsSummaryMap()` has been renamed to `ReactPerf.getWasted()`.
 
 ### New helpful warnings
 
@@ -93,7 +101,8 @@ Each of these changes will continue to work as before with a new warning until t
 - React DOM: When specifying a unit-less CSS value as a string, a future version will not add `px` automatically. This version now warns in this case (ex: writing `style={{'{{'}}width: '300'}}`. (Unitless *number* values like `width: 300` are unchanged.)
 - Synthetic Events will now warn when setting and accessing properties (which will not get cleared appropriately), as well as warn on access after an event has been returned to the pool.
 - Elements will now warn when attempting to read `ref` and `key` from the props.
-- React DOM now attempts to warn for mistyped event handlers on DOM elements (ex: `onclick` which should be `onClick`)
+- React DOM now attempts to warn for mistyped event handlers on DOM elements (ex: `onclick` which should be `onClick`).
+- React now prints a descriptive error message when you pass an invalid callback as the last argument to `ReactDOM.render()`, `this.setState()`, or `this.forceUpdate()`.
 
 ### Notable bug fixes
 
@@ -105,3 +114,7 @@ Each of these changes will continue to work as before with a new warning until t
 - Add-Ons: ReactTransitionGroup now correctly handles multiple nodes being removed simultaneously.
 - `Object.is` is used in a number of places to compare values, which leads to fewer false positives, especially involving `NaN`. In particular, this affects the `shallowCompare` add-on.
 - React DOM now defaults to using DOM attributes instead of properties, which fixes a few edge case bugs. Additionally the nullification of values (ex: `href={null}`) now results in the forceful removal, no longer trying to set to the default value used by browsers in the absence of a value.
+
+### Other improvements
+
+- React now uses `loose-envify` instead of `envify` so it installs less transitive dependencies.
