--- a/docs/_posts/2016-04-04-react-v15.md
+++ b/docs/_posts/2016-04-04-react-v15.md
@@ -53,9 +53,7 @@ If you can’t use `npm` yet, we provide pre-built browser builds for your conve
 
     There were a number of large changes to our interactions with the DOM. One of the most noticeable changes is that we no longer set the `data-reactid` attribute for each DOM node. While this will make it more difficult to know if a website is using React, the advantage is that the DOM is much more lightweight. This change was made possible by us switching to use `document.createElement` on initial render. Previously we would generate a large string of HTML and then set `node.innerHTML`. At the time, this was decided to be faster than using `document.createElement` for the majority of cases and browsers that we supported. Browsers have continued to improve and so overwhelmingly this is no longer true. By using `createElement` we can make other parts of React faster. The ids were used to map back from events to the original React component, meaning we had to do a bunch of work on every event, even though we cached this data heavily. As we’ve all experienced, caching and in particularly invalidating caches, can be error prone and we saw many hard to reproduce issues over the years as a result. Now we can build up a direct mapping at render time since we already have a handle on the node.
 
-    Note that `data-reactid` is still present in the markup generated when rendering on the server although there [may be ways](https://github.com/facebook/react/issues/5869) to remove it completely in the future releases. Please feel free to explore this and send a pull request if you get it working.
-
-    If you used `data-reactid` to detect websites using React, you can now look for `data-reactroot` instead. Unlike `data-reactid`, `data-reactroot` will only be set on the root DOM node. Still, these attributes are considered to be implementation details of React, and we suggest you to avoid relying on their presence.
+    Note that the `data-reactid` attribute is still present in the server rendered markup. There [may be ways](https://github.com/facebook/react/issues/5869) to remove it completely in the future releases so, if you are interested, feel free to explore the problem and send a pull request if you find a solution. Finally, if you used `data-reactid` to detect websites using React, you can now check for `data-reactroot` instead. Unlike `data-reactid`, `data-reactroot` will only be set on the root DOM node. Still, these attributes are considered to be implementation details of React, and we suggest you to avoid relying on their presence.
 
 - #### No more extra `<span>`s
 
