Experiment: start adding some links to authors and PRs

--- a/docs/_posts/2016-04-04-react-v15.md
+++ b/docs/_posts/2016-04-04-react-v15.md
@@ -84,35 +84,41 @@ These deprecations were introduced in v0.14 with a warning and the APIs are now 
 - Deprecated APIs are removed from `React.addons`, specifically `batchedUpdates` and `cloneWithProps`.
 - Deprecated APIs are removed from component instances, specifically `setProps`, `replaceProps`, and `getDOMNode`.
 - Deprecated CommonJS entry point `react/addons` is removed in favor of the separate `react-addons-*` packages. This does not affect the `react-with-addons.js` UMD build.
+- Void elements such as `<input>` now throw if you supply `children` to them instead of warning. ([@jonhester](https://github.com/jonhester) in [#3372](https://github.com/facebook/react/pull/3372))
 
 ### New deprecations, introduced with a warning
 
 Each of these changes will continue to work as before with a new warning until the release of React 16 so you can upgrade your code gradually.
 
-- `LinkedStateMixin` and `valueLink` are now deprecated due to very low popularity. If you need this, you can use a wrapper component that implements the same behavior: [react-linked-input](https://www.npmjs.com/package/react-linked-input).
+- `LinkedStateMixin` and `valueLink` are now deprecated due to very low popularity. If you need this, you can use a wrapper component that implements the same behavior: [react-linked-input](https://www.npmjs.com/package/react-linked-input). ([@jimfb](https://github.com/jimfb) in [#5032](https://github.com/facebook/react/pull/5032))
+- Future versions of React will treat `<input value={null}>` as a request to clear the input. However, React 0.14 and earlier versions have been ignoring `value={null}`. React 15 warns you when you pass a `null` value that the behavior will change in the future versions, and offers you to clarify your intent right away. To fix the warning, you may explicitly pass an empty string to clear a controlled input, or pass `undefined` to make the input uncontrolled. In the future versions, passing `null` will clear the input but we keep the old behavior in React 15 so you have the time to prepare for this. ([@antoaravinth](https://github.com/antoaravinth) in [#5048](https://github.com/facebook/react/pull/5048))
 - `ReactPerf.printDOM()` has been renamed to `ReactPerf.printOperations()`.
 - `ReactPerf.getMeasurementsSummaryMap()` has been renamed to `ReactPerf.getWasted()`.
 
 ### New helpful warnings
 
-- If you use a minified copy of the _development_ build, React DOM kindly encourages you to use the faster production build instead.
+- If you use a minified copy of the _development_ build, React DOM kindly encourages you to use the faster production build instead. ([@spicyj](https://github.com/spicyj) in [#5083](https://github.com/facebook/react/pull/5083))
 - React DOM: When specifying a unit-less CSS value as a string, a future version will not add `px` automatically. This version now warns in this case (ex: writing `style={{'{{'}}width: '300'}}`. (Unitless *number* values like `width: 300` are unchanged.)
-- Synthetic Events will now warn when setting and accessing properties (which will not get cleared appropriately), as well as warn on access after an event has been returned to the pool.
+- Synthetic Events will now warn when setting and accessing properties (which will not get cleared appropriately), as well as warn on access after an event has been returned to the pool. ([@pluma](https://github.com/pluma) in [#5140](https://github.com/facebook/react/pull/5140))
 - Elements will now warn when attempting to read `ref` and `key` from the props.
 - React DOM now attempts to warn for mistyped event handlers on DOM elements (ex: `onclick` which should be `onClick`).
 - React now prints a descriptive error message when you pass an invalid callback as the last argument to `ReactDOM.render()`, `this.setState()`, or `this.forceUpdate()`.
 
 ### Notable bug fixes
 
-- Fixed multiple small memory leaks
+- Fixed multiple small memory leaks. ([@spicyj](https://github.com/spicyj) in [#4983](https://github.com/facebook/react/pull/4983))
 - Click events are handled by React DOM more reliably in mobile browsers, particularly in Mobile Safari.
-- Input events are handled more reliably in IE 10 and IE 11; spurious events no longer fire when using a placeholder.
+- Input events are handled more reliably in IE 10 and IE 11; spurious events no longer fire when using a placeholder. ([@jquense](https://github.com/jquense) in [#4051](https://github.com/facebook/react/pull/4051))
 - React DOM now supports the `cite` and `profile` HTML attributes.
+- React DOM now supports `gridRow` and `gridColumn` CSS properties. ([@mnordick](https://github.com/mnordick) in [#4779](https://github.com/facebook/react/pull/4779))
 - React DOM now supports the `onAnimationStart`, `onAnimationEnd`, `onAnimationIteration`, `onTransitionEnd`, and `onInvalid` events. Support for `onLoad` has been added to `object` elements.
 - Add-Ons: ReactTransitionGroup now correctly handles multiple nodes being removed simultaneously.
 - `Object.is` is used in a number of places to compare values, which leads to fewer false positives, especially involving `NaN`. In particular, this affects the `shallowCompare` add-on.
-- React DOM now defaults to using DOM attributes instead of properties, which fixes a few edge case bugs. Additionally the nullification of values (ex: `href={null}`) now results in the forceful removal, no longer trying to set to the default value used by browsers in the absence of a value.
+- React DOM now defaults to using DOM attributes instead of properties, which fixes a few edge case bugs. Additionally the nullification of values (ex: `href={null}`) now results in the forceful removal, no longer trying to set to the default value used by browsers in the absence of a value. ([@syranide](https://github.com/syranide) in [#1510](https://github.com/facebook/react/pull/1510))
+- React DOM does not mistakingly coerce `children` to strings for Web Components. ([@jimfb](https://github.com/jimfb) in [#5093](https://github.com/facebook/react/pull/5093))
 
 ### Other improvements
 
 - React now uses `loose-envify` instead of `envify` so it installs less transitive dependencies.
+- Shallow renderer now exposes `getMountedInstance()`. ([@glenjamin](https://github.com/glenjamin) in [#4918](https://github.com/facebook/react/pull/4918))
+- React removes the dependency on ES5 shams for `Object.create` and `Object.freeze` in older environments. ([@dgreensp](https://github.com/dgreensp) in [#4959](https://github.com/facebook/react/pull/4959))
