Add more links (too much? we'll see)

--- a/docs/_posts/2016-04-04-react-v15.md
+++ b/docs/_posts/2016-04-04-react-v15.md
@@ -63,6 +63,8 @@ If you can’t use `npm` yet, we provide pre-built browser builds for your conve
 
     We’ve also made use of these comment nodes to change what `null` renders to. Rendering to `null` was a feature we added in React 0.11 and was implemented by rendering `<noscript>` elements. By rendering to comment nodes now, there’s a chance some of your CSS will be targeting the wrong thing, specifically if you are making use of `:nth-child` selectors. This, along with the other changes mentioned above, have always been considered implementation details of how React targets the DOM. We believe they are safe changes to make without going through a release with warnings detailing the subtle differences as they are details that should not be depended upon. Additionally, we have seen that these changes have improved React performance for many typical applications.
 
+    ([@spicyj](https://github.com/spicyj) in [#5451](https://github.com/facebook/react/pull/5451))
+
 - #### Functional components can now return `null` too
 
     We added support for [defining stateless components as functions](/react/blog/2015/09/10/react-v0.14-rc1.html#stateless-function-components) in React 0.14. However, React 0.14 still allowed you to define a class component without extending `React.Component` or using `React.createClass()`, so [we couldn’t reliably tell if your component is a function or a class](https://github.com/facebook/react/issues/5355), and did not allow returning `null` from it. This issue is solved in React 15, and you can now return `null` from any component, whether it is a class or a function.
@@ -82,15 +84,16 @@ These deprecations were introduced in v0.14 with a warning and the APIs are now 
 
 - Deprecated APIs are removed from `React`, specifically `findDOMNode`, `render`, `renderToString`, `renderToStaticMarkup`, and `unmountComponentAtNode`.
 - Deprecated APIs are removed from `React.addons`, specifically `batchedUpdates` and `cloneWithProps`.
-- Deprecated APIs are removed from component instances, specifically `setProps`, `replaceProps`, and `getDOMNode`.
+- Deprecated APIs are removed from component instances, specifically `setProps`, `replaceProps`, and `getDOMNode`. ([@jimfb](https://github.com/jimfb) in [#5570](https://github.com/facebook/react/pull/5570))
 - Deprecated CommonJS entry point `react/addons` is removed in favor of the separate `react-addons-*` packages. This does not affect the `react-with-addons.js` UMD build.
 - Passing `children` to void elements like `<input>` was deprecated, and now throws an error. ([@jonhester](https://github.com/jonhester) in [#3372](https://github.com/facebook/react/pull/3372))
+- React 0.14 returns DOM nodes themselves as `ref`s to DOM elements rather than special wrappers. React-specific properties on DOM `ref`s like `props` were deprecated in React 0.14 and are removed in React 15. ([@jimfb](https://github.com/jimfb) in [#5495](https://github.com/facebook/react/pull/5495))
 
 ### New deprecations, introduced with a warning
 
 Each of these changes will continue to work as before with a new warning until the release of React 16 so you can upgrade your code gradually.
 
-- `LinkedStateMixin` and `valueLink` are now deprecated due to very low popularity. If you need this, you can use a wrapper component that implements the same behavior: [react-linked-input](https://www.npmjs.com/package/react-linked-input). ([@jimfb](https://github.com/jimfb) in [#5032](https://github.com/facebook/react/pull/5032))
+- `LinkedStateMixin` and `valueLink` are now deprecated due to very low popularity. If you need this, you can use a wrapper component that implements the same behavior: [react-linked-input](https://www.npmjs.com/package/react-linked-input). ([@jimfb](https://github.com/jimfb) in [#5032](https://github.com/facebook/react/pull/5032) and [#5718](https://github.com/facebook/react/pull/5718))
 - Future versions of React will treat `<input value={null}>` as a request to clear the input. However, React 0.14 and earlier versions have been ignoring `value={null}`. React 15 warns you when you pass a `null` value that the behavior will change in the future versions, and offers you to clarify your intent right away. To fix the warning, you may explicitly pass an empty string to clear a controlled input, or pass `undefined` to make the input uncontrolled. In the future versions, passing `null` will clear the input but we keep the old behavior in React 15 so you have the time to prepare for this. ([@antoaravinth](https://github.com/antoaravinth) in [#5048](https://github.com/facebook/react/pull/5048))
 - `ReactPerf.printDOM()` has been renamed to `ReactPerf.printOperations()`.
 - `ReactPerf.getMeasurementsSummaryMap()` has been renamed to `ReactPerf.getWasted()`.
@@ -102,9 +105,10 @@ Each of these changes will continue to work as before with a new warning until t
 - Synthetic Events will now warn when setting and accessing properties (which will not get cleared appropriately), as well as warn on access after an event has been returned to the pool. ([@pluma](https://github.com/pluma) in [#5140](https://github.com/facebook/react/pull/5140))
 - Elements will now warn when attempting to read `ref` and `key` from the props.
 - React will now warn if you pass a different `props` object to `super()` in the constructor. ([@prometheansacrifice](https://github.com/prometheansacrifice) in [#5346](https://github.com/facebook/react/pull/5346))
-- React DOM now attempts to warn for mistyped event handlers on DOM elements, such as `onclick` which should be `onClick`. ([@ali](https://github.com/ali) in [#5361](https://github.com/facebook/react/pull/5361))
+- React DOM now attempts to warn for mistyped event handlers on DOM elements. For example, `onclick` should have been `onClick`. ([@ali](https://github.com/ali) in [#5361](https://github.com/facebook/react/pull/5361))
 - React now prints a descriptive error message when you pass an invalid callback as the last argument to `ReactDOM.render()`, `this.setState()`, or `this.forceUpdate()`. ([@conorhastings](https://github.com/conorhastings) in [#5193](https://github.com/facebook/react/pull/5193) and [@gaearon](https://github.com/gaearon) in [#6310](https://github.com/facebook/react/pull/6310))
 - Add-Ons: `TestUtils.Simulate()` now prints a helpful message if you attempt to use it with shallow rendering. ([@conorhastings](https://github.com/conorhastings) in [#5358](https://github.com/facebook/react/pull/5358))
+- PropTypes: `arrayOf()` and `objectOf()` provide better error messages for invalid arguments. ([@chicoxyzzy](https://github.com/chicoxyzzy) in [#5390](https://github.com/facebook/react/pull/5390))
 
 ### Notable bug fixes
 
@@ -124,5 +128,7 @@ Each of these changes will continue to work as before with a new warning until t
 
 - React now uses `loose-envify` instead of `envify` so it installs less transitive dependencies.
 - Shallow renderer now exposes `getMountedInstance()`. ([@glenjamin](https://github.com/glenjamin) in [#4918](https://github.com/facebook/react/pull/4918))
+- Shallow renderer now returns the rendered element. ([@simonewebdesign](https://github.com/simonewebdesign) in [#5411](https://github.com/facebook/react/pull/5411))
 - React removes the dependency on ES5 shams for `Object.create` and `Object.freeze` in older environments. ([@dgreensp](https://github.com/dgreensp) in [#4959](https://github.com/facebook/react/pull/4959))
 - React DOM now allows `data-` attributes with names that start with numbers. ([@nLight](https://github.com/nLight) in [#5216](https://github.com/facebook/react/pull/5216))
+- React improves performance for `createClass()` on complex specs. ([@spicyj](https://github.com/spicyj) in [#5550](https://github.com/facebook/react/pull/5550))
